添加凯文·凯利的《新经济新规则》

--- a/2018/信息简史.md
+++ b/2018/信息简史.md
@@ -1,5 +1,7 @@
 # 读一书 | 信息简史
 
+作者：詹姆斯·格雷克
+
 导读：詹姆斯·格雷克用了七年时间完成的这本书，试图把握住信息这个宏大的主题。在这本书中作者记录下了信息在人类生活中扮演越来越重要角色的过程，以及各种新技术不断强化信息的速率、数量和重要信的方式。通读这本书不仅能帮我更好地理解信息这一概念，而且还引导我从另一个角度来看待我们所生活的这个世界。五星评价。
 
 这本书涉及到很多现代科学的内容，作者从非洲会说话的鼓开始，依次讲述了文字、词典、书籍、电、电报、电脑、基因、模因、维基百科等信息载体的发明和使用情况。此后以香农的信息论为中心，向我们介绍了信息的前世今生。知识点有多，我只好把自己感兴趣的点摘录下来，以便重读时进一步思考。
