更新 信息简史

--- a/2018/信息简史.md
+++ b/2018/信息简史.md
@@ -20,4 +20,31 @@
 
 第七：信息论。这里引出了两本巨著，图灵的《论可计算数》和香农的《通信的数学原理》。图灵将可计算数定义为，其小数表达式可在有限步骤内计算出来，同时图灵把计算定义为一个机械的过程，一种算法。恐怖的是那时图灵大大就已经凭借着数学与逻辑在脑中构想出了一台能用高度形式化的指令来处理同样形式化信息的机器—— 图灵机。
 
-第八：信息转向。
+第八：信息转向。对信息论的研究给生物、心理、控制论、哲学等方向的研究带来了新的启示。香农指出“通信的基本问题是，在一点精确地或近似地复现在另一点所选取的讯息”。
+
+第九：熵和麦克斯韦妖。熵恒增的热力学第二定律以及麦克斯韦妖，使得热力学和信息论能够联系在一起，获取信息即增加了系统的熵，没有违反熵恒增的定律。
+
+第十：生命的编码。这一部分主要是讲分子生物学的历史，对基因的认识，从物质的概念转向信息的认识，DNA碱基对不是基因，而是编码了基因。基因本身是由比特构成的。
+
+十一：跃入模因池。模因指人类文化，跟基因类似，人体同时也是模因的传递载具。模因跟基因一样也在不断的竞争，适者生存。模因与基因一样，也会对广阔的外部世界产生影响。模因能够不借助语言进行传播，因而在语言诞生之前也照样畅行无阻。随着信息流带来越来越广阔的相互联系，模因的进化速度也越来越快，传播范围也越来越广。（对于第十跟第十一章的内容有兴趣可以接着去读理查德·道金斯《自私的基因》）
+
+十二：认识随机性。随机程度如何与含有多少信息是同一个问题，答案也是同一个。一个数只要是可计算的，即它能够被一个可定义的计算机程序生成，那它就不是随机的。可计算性是随机性的一种度量。蔡廷采用算法的长短来度量可计算性。算法的长短也度量了给定字符串里含有多少信息。柯尔莫哥洛夫提出了复杂度的概念，一个数，一条讯息或一组数据的复杂度与其简单程度，有序度呈反比，因而与其含有的信息呈正比。一个对象越简单，其传递的信息就越少；相反，复杂度越高，其含有的信息就越多。一条讯息就是一种算法，接收方则是一部机器，没有创造力，没有不确定性，除了蕴涵在机器结构内的那些“知识”以外，别无其他知识。
+
+十三：信息是物理的。量子比特是最小的非平凡量子系统。与一个经典比特一样，它也有两个可能的取值零和一。在量子系统中无法在不干扰的前提下观察。量子比特是一种态叠加，是不同概率幅的线性组合。信息是物理的。量子计算机使用量子比特代替传统比特。可以实现并行计算。在量子计算中，量子比特是相互纠缠的。多个量子比特一齐工作，威力呈指数增加。量子比特具有超强的并行计算潜力。
+
+十四：洪流过后。“洪流”是人们描述信息过量时的常用隐喻，这一章介绍了维基百科的历史，以及人类信息爆炸的情况。
+
+十五：每天都有新消息。反思了信息过载的问题，应对的策略虽然多种多样，但归根到底，本质上可归为两类：要么是过滤，要么是搜索。（关于这一点凯利·凯文《必然》中也有更详细的介绍）。
+
+总结：信息是不确定性，是出人意料，是困难程度，是熵。信息不仅存在于通信中，还在热力学、生命延续、人类文化延续等方面都有体现，最后信息问题还是量子力学的根本问题之一，因此作者最后得出结论，信息是物理的，万物皆比特。
+
+备注：作者在书中提到过的书，或者我觉得与之有关联的著作。
+
+- 《自私的基因》理查德·道金斯
+- 《必然》凯文·凯利
+- 《论可计算数》阿兰·图灵
+- 《通信的数学原理》克劳德·香农
+- 《理论遗传学的代数》克劳德·香农
+- 《混沌》詹姆斯·格雷克
+- 《墨丘利神，秘密而快捷的信使》约翰·威尔金斯
+- 《控制论：或关于在动物和机器中控制和通信的科学》诺伯特·维纳
