更新了信息简史的笔记

--- a/2018/信息简史.md
+++ b/2018/信息简史.md
@@ -6,39 +6,73 @@
 
 这本书涉及到很多现代科学的内容，作者从非洲会说话的鼓开始，依次讲述了文字、词典、书籍、电、电报、电脑、基因、模因、维基百科等信息载体的发明和使用情况。此后以香农的信息论为中心，向我们介绍了信息的前世今生。知识点有多，我只好把自己感兴趣的点摘录下来，以便重读时进一步思考。
 
-第一：会说话的鼓。非洲的鼓语不仅可以用来伴奏，而且还可以用来交谈，甚至还能做到远距离传输信息。比如妻子在家做好了饭，可以通过一段鼓语传送给100米外的邻居，邻居接收到这个信号后可以继续把鼓语传送下去，一直到千里之外的丈夫耳里，接着丈夫也可以通过鼓语到方式告诉妻子自己的工作情况。（是不是突然觉得非洲的大兄弟很牛逼，人肉电话系统）。另外一点就是冗余的信息可防止失真。
+## 第一：会说话的鼓。
 
-第二：持久的文字。文字是我们获取知识的机制和组织思维的手段。文字，作为一种技术，使用时需要提前考虑清楚并掌握特殊的技能。而语言则不是一种技术，无论多么成熟、多么发达的语言，都不能被视作心外之物，因为语言是心智本身的功能。从口语到文字的转变是第一次进步，从此，思想就有了载体，得以在岁月中沉淀下来，代代相传，而文字的结构对于人类的思维也有重要的影响。
+非洲的鼓语不仅可以用来伴奏，而且还可以用来交谈，甚至还能做到远距离传输信息。比如妻子在家做好了饭，可以通过一段鼓语传送给100米外的邻居，邻居接收到这个信号后可以继续把鼓语传送下去，一直到千里之外的丈夫耳里，接着丈夫也可以通过鼓语到方式告诉妻子自己的工作情况。（是不是突然觉得非洲的大兄弟很牛逼，人肉电话系统）。另外一点就是冗余的信息可防止失真。
 
-第三：两本词典。通过对词典发展历史的回顾，阐述了文字的不确定性和拼写的随机性。关于这一点我觉得汉语倒是挺稳定的，这算是方块字的其中一只优势吧。
+## 第二：持久的文字。
 
-第四：将思想注入齿轮。随着数学的发展，人类企业用更抽象简洁的形式来传达信息，巴贝奇的差分机就是一种尝试，他试图用机械来模拟人脑的计算。在差分机的引导下爱达·拜伦在脑海里就已经有了算法的雏形。
+文字是我们获取知识的机制和组织思维的手段。文字，作为一种技术，使用时需要提前考虑清楚并掌握特殊的技能。而语言则不是一种技术，无论多么成熟、多么发达的语言，都不能被视作心外之物，因为语言是心智本身的功能。从口语到文字的转变是第一次进步，从此，思想就有了载体，得以在岁月中沉淀下来，代代相传，而文字的结构对于人类的思维也有重要的影响。
 
-第五：地球的神经系统。从电力出发谈到电报的发展历程，在十九世纪末，人们逐渐适应或者至少熟悉了编码的概念：用以表示其它词语的词语。从一种抽象向另一种抽象转换。之后引出了密码学的相关知识，非常吸引人。
+## 第三：两本词典。
 
-第六：新电线新逻辑。通过融合逻辑学和数学，创建出一个由公理、符号、公式和证明构成的体系，哲学家们似乎可以企及某种完美——达到一种严格的、形式上的确定性。难怪现代的哲学家都是数学大佬，要不然实在玩不转。人们在面对一种全新技术时通常会遭遇想象力失灵。
+通过对词典发展历史的回顾，阐述了文字的不确定性和拼写的随机性。关于这一点我觉得汉语倒是挺稳定的，这算是方块字的其中一只优势吧。
 
-第七：信息论。这里引出了两本巨著，图灵的《论可计算数》和香农的《通信的数学原理》。图灵将可计算数定义为，其小数表达式可在有限步骤内计算出来，同时图灵把计算定义为一个机械的过程，一种算法。恐怖的是那时图灵大大就已经凭借着数学与逻辑在脑中构想出了一台能用高度形式化的指令来处理同样形式化信息的机器—— 图灵机。
+##第四：将思想注入齿轮。
 
-第八：信息转向。对信息论的研究给生物、心理、控制论、哲学等方向的研究带来了新的启示。香农指出“通信的基本问题是，在一点精确地或近似地复现在另一点所选取的讯息”。
+随着数学的发展，人类企业用更抽象简洁的形式来传达信息，巴贝奇的差分机就是一种尝试，他试图用机械来模拟人脑的计算。在差分机的引导下爱达·拜伦在脑海里就已经有了算法的雏形。
 
-第九：熵和麦克斯韦妖。熵恒增的热力学第二定律以及麦克斯韦妖，使得热力学和信息论能够联系在一起，获取信息即增加了系统的熵，没有违反熵恒增的定律。
+## 第五：地球的神经系统。
 
-第十：生命的编码。这一部分主要是讲分子生物学的历史，对基因的认识，从物质的概念转向信息的认识，DNA碱基对不是基因，而是编码了基因。基因本身是由比特构成的。
+从电力出发谈到电报的发展历程，在十九世纪末，人们逐渐适应或者至少熟悉了编码的概念：用以表示其它词语的词语。从一种抽象向另一种抽象转换。之后引出了密码学的相关知识，非常吸引人。
 
-十一：跃入模因池。模因指人类文化，跟基因类似，人体同时也是模因的传递载具。模因跟基因一样也在不断的竞争，适者生存。模因与基因一样，也会对广阔的外部世界产生影响。模因能够不借助语言进行传播，因而在语言诞生之前也照样畅行无阻。随着信息流带来越来越广阔的相互联系，模因的进化速度也越来越快，传播范围也越来越广。（对于第十跟第十一章的内容有兴趣可以接着去读理查德·道金斯《自私的基因》）
+## 第六：新电线新逻辑。
 
-十二：认识随机性。随机程度如何与含有多少信息是同一个问题，答案也是同一个。一个数只要是可计算的，即它能够被一个可定义的计算机程序生成，那它就不是随机的。可计算性是随机性的一种度量。蔡廷采用算法的长短来度量可计算性。算法的长短也度量了给定字符串里含有多少信息。柯尔莫哥洛夫提出了复杂度的概念，一个数，一条讯息或一组数据的复杂度与其简单程度，有序度呈反比，因而与其含有的信息呈正比。一个对象越简单，其传递的信息就越少；相反，复杂度越高，其含有的信息就越多。一条讯息就是一种算法，接收方则是一部机器，没有创造力，没有不确定性，除了蕴涵在机器结构内的那些“知识”以外，别无其他知识。
+通过融合逻辑学和数学，创建出一个由公理、符号、公式和证明构成的体系，哲学家们似乎可以企及某种完美——达到一种严格的、形式上的确定性。难怪现代的哲学家都是数学大佬，要不然实在玩不转。人们在面对一种全新技术时通常会遭遇想象力失灵。
 
-十三：信息是物理的。量子比特是最小的非平凡量子系统。与一个经典比特一样，它也有两个可能的取值零和一。在量子系统中无法在不干扰的前提下观察。量子比特是一种态叠加，是不同概率幅的线性组合。信息是物理的。量子计算机使用量子比特代替传统比特。可以实现并行计算。在量子计算中，量子比特是相互纠缠的。多个量子比特一齐工作，威力呈指数增加。量子比特具有超强的并行计算潜力。
+## 第七：信息论。
 
-十四：洪流过后。“洪流”是人们描述信息过量时的常用隐喻，这一章介绍了维基百科的历史，以及人类信息爆炸的情况。
+这里引出了两本巨著，图灵的《论可计算数》和香农的《通信的数学原理》。图灵将可计算数定义为，其小数表达式可在有限步骤内计算出来，同时图灵把计算定义为一个机械的过程，一种算法。恐怖的是那时图灵大大就已经凭借着数学与逻辑在脑中构想出了一台能用高度形式化的指令来处理同样形式化信息的机器—— 图灵机。
 
-十五：每天都有新消息。反思了信息过载的问题，应对的策略虽然多种多样，但归根到底，本质上可归为两类：要么是过滤，要么是搜索。（关于这一点凯利·凯文《必然》中也有更详细的介绍）。
+## 第八：信息转向。
 
-总结：信息是不确定性，是出人意料，是困难程度，是熵。信息不仅存在于通信中，还在热力学、生命延续、人类文化延续等方面都有体现，最后信息问题还是量子力学的根本问题之一，因此作者最后得出结论，信息是物理的，万物皆比特。
+对信息论的研究给生物、心理、控制论、哲学等方向的研究带来了新的启示。香农指出“通信的基本问题是，在一点精确地或近似地复现在另一点所选取的讯息”。
 
-备注：作者在书中提到过的书，或者我觉得与之有关联的著作。
+## 第九：熵和麦克斯韦妖。
+
+熵恒增的热力学第二定律以及麦克斯韦妖，使得热力学和信息论能够联系在一起，获取信息即增加了系统的熵，没有违反熵恒增的定律。
+
+## 第十：生命的编码。
+
+这一部分主要是讲分子生物学的历史，对基因的认识，从物质的概念转向信息的认识，DNA碱基对不是基因，而是编码了基因。基因本身是由比特构成的。
+
+## 十一：跃入模因池。
+
+模因指人类文化，跟基因类似，人体同时也是模因的传递载具。模因跟基因一样也在不断的竞争，适者生存。模因与基因一样，也会对广阔的外部世界产生影响。模因能够不借助语言进行传播，因而在语言诞生之前也照样畅行无阻。随着信息流带来越来越广阔的相互联系，模因的进化速度也越来越快，传播范围也越来越广。（对于第十跟第十一章的内容有兴趣可以接着去读理查德·道金斯《自私的基因》）
+
+## 十二：认识随机性。
+
+随机程度如何与含有多少信息是同一个问题，答案也是同一个。一个数只要是可计算的，即它能够被一个可定义的计算机程序生成，那它就不是随机的。可计算性是随机性的一种度量。蔡廷采用算法的长短来度量可计算性。算法的长短也度量了给定字符串里含有多少信息。柯尔莫哥洛夫提出了复杂度的概念，一个数，一条讯息或一组数据的复杂度与其简单程度，有序度呈反比，因而与其含有的信息呈正比。一个对象越简单，其传递的信息就越少；相反，复杂度越高，其含有的信息就越多。一条讯息就是一种算法，接收方则是一部机器，没有创造力，没有不确定性，除了蕴涵在机器结构内的那些“知识”以外，别无其他知识。
+
+## 十三：信息是物理的。
+
+量子比特是最小的非平凡量子系统。与一个经典比特一样，它也有两个可能的取值零和一。在量子系统中无法在不干扰的前提下观察。量子比特是一种态叠加，是不同概率幅的线性组合。信息是物理的。量子计算机使用量子比特代替传统比特。可以实现并行计算。在量子计算中，量子比特是相互纠缠的。多个量子比特一齐工作，威力呈指数增加。量子比特具有超强的并行计算潜力。
+
+## 十四：洪流过后。
+
+“洪流”是人们描述信息过量时的常用隐喻，这一章介绍了维基百科的历史，以及人类信息爆炸的情况。
+
+## 十五：每天都有新消息。
+
+反思了信息过载的问题，应对的策略虽然多种多样，但归根到底，本质上可归为两类：要么是过滤，要么是搜索。（关于这一点凯利·凯文《必然》中也有更详细的介绍）。
+
+## 总结：
+
+信息是不确定性，是出人意料，是困难程度，是熵。信息不仅存在于通信中，还在热力学、生命延续、人类文化延续等方面都有体现，最后信息问题还是量子力学的根本问题之一，因此作者最后得出结论，信息是物理的，万物皆比特。
+
+## 备注：
+
+作者在书中提到过的书，或者我觉得与之有关联的著作。
 
 - 《自私的基因》理查德·道金斯
 - 《必然》凯文·凯利
