更新了失控的笔记

--- a/2017/失控.md
+++ b/2017/失控.md
@@ -6,23 +6,39 @@
 
 作者在倒数第二章里，归纳出了大自然从无到有的九条规律，创业也是从无到有的一个过程，想必这个总结对于正在创业的兄弟也会有借鉴作用。特意摘录出来与君共勉。
 
-第一：分布式。一般来说，我们提到分布式后面往往都会接上去中心化这样一个词。个人认为分布式的目的就是为了去中心化，而去中心化伴随的就是失控。中心机构存在就是为了控制，比如央银控制钞票，中枢系统控制信息流等等。在有中心的系统里，中心就意味着权力，权力便是滋生腐败的源头，腐败会进一步拖垮整个系统，又是一个咬尾蛇的场景。而在分布式的环境下，这个控制的权力将会下方到参与网络的每一个节点，这样的世界将会怎么样呢？我想会更先进。比如最近这几年非常热门的比特币就是这样的一套系统，作为一枚程序员我更醉心于比特币底层的技术区块链。
+## 第一：分布式。
 
-第二：自下而上的控制。既然分布式导致了权力的下方，这必然也会引发决策模式的变更，自下而上的控制模式就被挖掘出来了。而事实上自下而上的控制模式才是大自然最正中的模式。KK在书中用了很大的篇幅来讲进化这个东西，我所理解的自下而上便是进化手段。关于进化的知识还需要推荐另外一个大神（理查德.道金斯）的书。
+一般来说，我们提到分布式后面往往都会接上去中心化这样一个词。个人认为分布式的目的就是为了去中心化，而去中心化伴随的就是失控。中心机构存在就是为了控制，比如央银控制钞票，中枢系统控制信息流等等。在有中心的系统里，中心就意味着权力，权力便是滋生腐败的源头，腐败会进一步拖垮整个系统，又是一个咬尾蛇的场景。而在分布式的环境下，这个控制的权力将会下方到参与网络的每一个节点，这样的世界将会怎么样呢？我想会更先进。比如最近这几年非常热门的比特币就是这样的一套系统，作为一枚程序员我更醉心于比特币底层的技术区块链。
 
-第三：收益递增。有钱的人越有钱，有才的人越有才，这就是经济学里的滚雪球效应。可惜作者并没有引入边际收益递减的规律，以至于有些问题我还留有疑问。当然这并不是一本经济学的书，我们大可不必过于纠结于这里。
+## 第二：自下而上的控制。
 
-第四：模块化生长。如其说是模块化生长，我觉得翻译成组合生长会更好。进化的过程就是一个组件不断组合的过程，两个原子一不小心组成了一个分子，两个分子一不小心就组成了高分子，接下来是基因蛋白质以至于后来的生物体。这一整个过程就是在组件在不断的组合，也就意味这不断的生长。在编程的技术领域，模块化也是非常重要的概念，我想阅读这本书确实能让你的代码写得更好。
+既然分布式导致了权力的下方，这必然也会引发决策模式的变更，自下而上的控制模式就被挖掘出来了。而事实上自下而上的控制模式才是大自然最正中的模式。KK在书中用了很大的篇幅来讲进化这个东西，我所理解的自下而上便是进化手段。关于进化的知识还需要推荐另外一个大神（理查德.道金斯）的书。
 
-第五：边界最大化。创新来源于边界，那些最微小的变化都在不为人知的角落里发生。在经济学、生态学、进化论和体制模型中，健康的边缘能够加快它们的适应过程，增加抵抗力。
+## 第三：收益递增。
 
-第六：鼓励犯错误。互联网世界里面最流行的就是试错，其实进化也可以看成是一种系统化的错误管理机制。关键在于不要被错误所打败，就屡败屡战。
+有钱的人越有钱，有才的人越有才，这就是经济学里的滚雪球效应。可惜作者并没有引入边际收益递减的规律，以至于有些问题我还留有疑问。当然这并不是一本经济学的书，我们大可不必过于纠结于这里。
 
-第七：不求最优化，但求多目标。对于这一点我保留意见，作者的意思是无中生有讲究的不是高雅，而是只要能运行就行了。或许在生物的世界里面这是可行的，但在创造产品的过程中，定位专一，把功能做到极致才是王道。
+## 第四：模块化生长。
+
+如其说是模块化生长，我觉得翻译成组合生长会更好。进化的过程就是一个组件不断组合的过程，两个原子一不小心组成了一个分子，两个分子一不小心就组成了高分子，接下来是基因蛋白质以至于后来的生物体。这一整个过程就是在组件在不断的组合，也就意味这不断的生长。在编程的技术领域，模块化也是非常重要的概念，我想阅读这本书确实能让你的代码写得更好。
+
+## 第五：边界最大化。
+
+创新来源于边界，那些最微小的变化都在不为人知的角落里发生。在经济学、生态学、进化论和体制模型中，健康的边缘能够加快它们的适应过程，增加抵抗力。
+
+## 第六：鼓励犯错误。
+
+互联网世界里面最流行的就是试错，其实进化也可以看成是一种系统化的错误管理机制。关键在于不要被错误所打败，就屡败屡战。
+
+## 第七：不求最优化，但求多目标。
+
+对于这一点我保留意见，作者的意思是无中生有讲究的不是高雅，而是只要能运行就行了。或许在生物的世界里面这是可行的，但在创造产品的过程中，定位专一，把功能做到极致才是王道。
 
 第八： 谋求持久的不均衡态。均衡即死亡，创造的神奇之处正是要在这个流动的临界点上安家落户，而这就是人类在追求的目标。经济学里这个点就是动态均衡的点，过一点就造成损失，差一点就还不够。
 
-第九： 变自生变。变化本身是可以结构的，说直白一点就是底层的变化是可以影响基于这种变化之上的变化，我们需要了解关于改变个体的规则是如何随时间而变化，就是说我们必须要具备能自我改变的规则。
+## 第九： 变自生变。
+
+变化本身是可以结构的，说直白一点就是底层的变化是可以影响基于这种变化之上的变化，我们需要了解关于改变个体的规则是如何随时间而变化，就是说我们必须要具备能自我改变的规则。
 
 说一下阅读这本书的体验，它并不是一本能一气读完的书，哪怕我已经通读第三遍了也时不时会被卡住，当然这可能是我智商低的表现吧，高智商人才应该可以做到的。但是在被卡住的过程中，通过思考反而能收获到更多，我们被卡住了，那恰恰就证明了我们接受到了新知识。最后引用凯利凯文在此书结尾的一段话来结束这篇书评，创业路上它就犹如明灯一样伴我前行。
 
