更新了微服务设计的笔记

--- a/2017/微服务设计.md
+++ b/2017/微服务设计.md
@@ -6,19 +6,33 @@
 
 在详细了解下文之前，我们得先理解什么是微服务。微服务架构是一种通过一套小型服务来开发单个应用的方法，每个服务运行在自己的进程中，并通过轻量级的机制进行通讯。书中作者总结了一些践行微服务架构的关键原则，现摘录于此。
 
-第一：围绕业务概念来建模。经验表明，围绕业务限界上下文定义接口，比围绕技术概念定义接口更加稳定。不仅可以帮助我们形成更稳定的接口，也能确保我们更好地反映业务流程的变化。关于这一点我是非常赞成的，事实上在开发ERP系统的过程中，更是需要如此。
+## 第一：围绕业务概念来建模。
 
-第二：接受自动化文化。微服务引入了很多复杂性，其中之一就是我们不得不管理大量的服务，解决这个问题的关键方法就是借助工具来实现自动化。比如自动化测试，持续交付等。
+经验表明，围绕业务限界上下文定义接口，比围绕技术概念定义接口更加稳定。不仅可以帮助我们形成更稳定的接口，也能确保我们更好地反映业务流程的变化。关于这一点我是非常赞成的，事实上在开发ERP系统的过程中，更是需要如此。
 
-第三：隐藏微服务内部实现细节。这样做可以防止各个服务之间出现紧耦合的纪律，从而增加服务的独立性，为以后的迭代升级，产品优化做基础。
+## 第二：接受自动化文化。
 
-第四：让一切都去中心化。需要给拥有服务的团队委派决策和控制权，可以使用内部开源模式，确保人民可以使用其它团队拥有的服务。让团队于组织保持一致，从而使康威定律起作用。对于内部开源模式这一点我觉得挺有意思的，给不同的服务独立建一个仓库，员工可以给各个仓库提交代码，服务的核心团队负责审核，绩效工资跟贡献度成正比。这样一来等于将福特用来管理工厂的模式引入到管理程序猿中。
+微服务引入了很多复杂性，其中之一就是我们不得不管理大量的服务，解决这个问题的关键方法就是借助工具来实现自动化。比如自动化测试，持续交付等。
 
-第五：可独立部署。独立做到让每个微服务都可以独立部署，在做不兼容的更改时，我们也应该同时提供新旧两个版本，允许消费者满满迁移到新版本中。
+## 第三：隐藏微服务内部实现细节。
 
-第六：隔离失败。在使用网络调用时，不要像使用本地调用那样处理远程调用，因为这样会隐藏不同的故障模式，所以需要确保使用的客户端，没有对远程调用进行过渡的抽象。在写代码的过程中，我们心中需要持有反脆弱的信条，预期在任何地方都可以会发生故障。
+这样做可以防止各个服务之间出现紧耦合的纪律，从而增加服务的独立性，为以后的迭代升级，产品优化做基础。
 
-第七：高度可观察。我们不能依靠观察点一服务实例或者一台服务器的行为，来看系统是否运行正常。相反，我们需要从系统上看待正在发生的事情。管中窥豹是不适合在开发中使用的。通过注入合成时间到你的系统中，模拟真实用户的行为，从而使用语义监控来查看系统是否正常运行。
+## 第四：让一切都去中心化。
+
+需要给拥有服务的团队委派决策和控制权，可以使用内部开源模式，确保人民可以使用其它团队拥有的服务。让团队于组织保持一致，从而使康威定律起作用。对于内部开源模式这一点我觉得挺有意思的，给不同的服务独立建一个仓库，员工可以给各个仓库提交代码，服务的核心团队负责审核，绩效工资跟贡献度成正比。这样一来等于将福特用来管理工厂的模式引入到管理程序猿中。
+
+## 第五：可独立部署。
+
+独立做到让每个微服务都可以独立部署，在做不兼容的更改时，我们也应该同时提供新旧两个版本，允许消费者满满迁移到新版本中。
+
+## 第六：隔离失败。
+
+在使用网络调用时，不要像使用本地调用那样处理远程调用，因为这样会隐藏不同的故障模式，所以需要确保使用的客户端，没有对远程调用进行过渡的抽象。在写代码的过程中，我们心中需要持有反脆弱的信条，预期在任何地方都可以会发生故障。
+
+## 第七：高度可观察。
+
+我们不能依靠观察点一服务实例或者一台服务器的行为，来看系统是否运行正常。相反，我们需要从系统上看待正在发生的事情。管中窥豹是不适合在开发中使用的。通过注入合成时间到你的系统中，模拟真实用户的行为，从而使用语义监控来查看系统是否正常运行。
 
 在了解了微服务架构的知识后，我们也需要知道在什么时候不应该使用微服务。
 
